Regression: Geometry Node: Curve positions corruption #104690

Closed
opened 2023-02-13 12:45:22 +01:00 by Dvorakir · 2 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94

Blender Version
Broken: version: 3.5.0 Alpha, branch: main, commit date: 2023-02-13 01:17, hash: rB2a7440176e58
Worked: 3.4.1

Caused by 7f958217ad

Short description of error

Resampled Curve position attribute contains broken bytes:
image

Exact steps for others to reproduce the error
image

  1. Create a curve. In geometry node tree on this object:
    a. Resample Curve (by length).
    b. Join this curve, and Store Named Attribute -> Curve to Points.
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94 **Blender Version** Broken: version: 3.5.0 Alpha, branch: main, commit date: 2023-02-13 01:17, hash: `rB2a7440176e58` Worked: 3.4.1 Caused by 7f958217ada294a3aa19116aebb7bef832b9c648 **Short description of error** Resampled Curve position attribute contains broken bytes: ![image](/attachments/8e74b8d7-2afe-4cbc-bbe7-1f963f821a58) **Exact steps for others to reproduce the error** ![image](/attachments/e2c2a174-955f-447b-b67d-7e6455954821) 1. Create a curve. In geometry node tree on this object: a. Resample Curve (by length). b. Join this curve, and `Store Named Attribute` -> `Curve to Points`.
Dvorakir added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-02-13 12:45:23 +01:00
Member

Can confirm, will check.

Can confirm, will check.
Member

Caused by 7f958217ad

CC @HooglyBoogly

Caused by 7f958217ada294a3aa19116aebb7bef832b9c648 CC @HooglyBoogly
Philipp Oeser changed title from Capturing attribute on resampled curve points causes invalid geometry to Regression: Capturing attribute on resampled curve points causes invalid geometry 2023-02-13 14:23:08 +01:00
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2023-02-13 14:23:18 +01:00
Iliya Katushenock changed title from Regression: Capturing attribute on resampled curve points causes invalid geometry to Regression: Geometry Node: Curve attributes corruption 2023-02-13 14:49:52 +01:00
Iliya Katushenock changed title from Regression: Geometry Node: Curve attributes corruption to Regression: Geometry Node: Curve positions corruption 2023-02-13 15:09:11 +01:00
Hans Goudey added this to the 3.5 milestone 2023-02-14 15:59:47 +01:00
Hans Goudey self-assigned this 2023-02-14 15:59:53 +01:00
Brecht Van Lommel added
Type
Bug
and removed
Type
Report
labels 2023-02-15 10:21:21 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-15 17:38:37 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104690
No description provided.